# cgnet

./: .gitignore  LICENSE  README.md  env.yaml  pyproject.toml
test/test_nutils/: test_adaptivity.py  test_cahnhilliard.py  test_elasticity.py  test_platewithhole.py
test/test_torch_geometric/: test_gat.py
